# TigorEngineAndroid

app/: build.gradle.kts
app/src/androidTest/java/ru/zamarterrier/testandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  TigorEngine.cpp  TigorEngine.h  e_blue_print.cpp  e_blue_print.h  e_buffer.cpp  e_buffer.h  e_buffers_variables.h  e_camera.cpp  e_camera.h  e_debugger.cpp  e_debugger.h  e_descriptor.cpp  e_descriptor.h  e_device.cpp  e_device.h  e_device_variables.h  e_direct.cpp  e_direct.h  e_math.cpp  e_math.h  e_math_variables.h  e_memory.cpp  e_memory.h  e_pipeline_variables.h  e_resource_descriptors.cpp  e_resource_descriptors.h  e_resource_shapes.cpp  e_resource_shapes.h  e_shaders.cpp  e_shaders.h  e_texture.cpp  e_texture.h  e_texture_variables.h  e_tools.cpp  e_tools.h  e_transform.cpp  e_transform.h  e_vertex.h  e_window.cpp  (+26 more)
app/src/main/java/ru/zamarterrier/testandroid/: MainActivity.java
app/src/test/java/ru/zamarterrier/testandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
